--- a/app/views/events/search.erb
+++ b/app/views/events/search.erb
@@ -1,12 +1,13 @@
+
 <div id="search">
   <% form_for('search') do |f| %>
     <%= f.text_field :q %>
     <%= f.submit :submit %>
   <% end %>
+  <% if @q %>
+    <p>Your search for <%= @q %> found <%= @q.length %> events</p>
+    
+  <% end %>
 </div>
-
-<% if (params[:topic]) %>
-<h1><strong><%= @events.length %></strong> upcoming events for topic <strong><%= params[:topic] %></strong> (<%= link_to "Show all events", root_path %>)</h1>
-<% end %>
 
 <%= render :partial => 'events/events_list', :locals => { :events => @events } %>
