--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,9 +6,9 @@
    	<title>The Business Diary</title>
 	
 	<link rel="stylesheet" href="http://yui.yahooapis.com/2.7.0/build/reset-fonts-grids/reset-fonts-grids.css" type="text/css">
-   	<link rel="stylesheet" type="text/css" href="<%= assets %>/css/grid24.css" media="screen" />
-	<link rel="stylesheet" type="text/css" href="<%= assets %>/css/j-base.css" media="screen" />
-	<link rel="stylesheet" type="text/css" href="<%= assets %>/css/style.css" media="screen" /> 
+   	<link rel="stylesheet" type="text/css" href="/<%= assets %>/css/grid24.css" media="screen" />
+	<link rel="stylesheet" type="text/css" href="/<%= assets %>/css/j-base.css" media="screen" />
+	<link rel="stylesheet" type="text/css" href="/<%= assets %>/css/style.css" media="screen" /> 
 	
 	<%= stylesheet_link_tag "application2" %>
 	
