--- a/public/stylesheets/application2.css
+++ b/public/stylesheets/application2.css
@@ -136,3 +136,12 @@ img.logo {
 	padding: 10px;
 	font-size: 1.3em;
 }
+
+/* Search
+************************/
+#search {
+	margin-left:2em;
+}
+#search #q {
+	width: 30em; font-size: 1.5em;
+}
