--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -9,7 +9,7 @@
 	stylesheets << 'admin' if admin_signed_in?
     %>
 	<%= stylesheet_link_tag stylesheets %>
-	<%= javascript_include_tag 'jquery-1.4.1-min', 'rails', 'application' %>
+	<%= javascript_include_tag 'jquery-1.4.1-min', 'rails' %>
  	<%
 	#= csrf_meta_tag 
 	%>
