--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,7 @@
 	
 	<%= stylesheet_link_tag "application2" %>
 	
-	<%= javascript_include_tag 'jquery-1.4.1-min', 'rails', 'application' %>
-	<%= javascript_include_tag 'jsl', 'rails', 'application' %>
+	<%= javascript_include_tag 'jquery-1.4.1-min', 'rails', 'application', 'jsl' %>
   
 	<script type="text/javascript" src="/fancybox/jquery.easing-1.3.pack.js"></script>
 	<script type="text/javascript" src="/fancybox/jquery.fancybox-1.3.1.pack.js"></script>
