--- a/app/views/events/_search.html.erb
+++ b/app/views/events/_search.html.erb
@@ -1,4 +1,4 @@
-<div id="search"
+<div id="search">
   <% unless @q %>
     <div class="hint">
       Which events are you looking for? Search by event type, location or organiser.
