--- a/public/stylesheets/application2.css
+++ b/public/stylesheets/application2.css
@@ -12,7 +12,7 @@ img.logo {
 }
 
 #hd {
-	padding: 20px;
+	padding: 20px 20px 0 20px;
 }
 
 #mast h1 {
@@ -43,10 +43,8 @@ img.logo {
 .events {
 }
 
-#messages {
-	padding: 10px;	
-}
 #messages .error, #messages .info, #messages .success {
+	margin: 10px;
 	padding: 10px;
 	border: 2px solid;	
 }
@@ -140,13 +138,78 @@ img.logo {
 /* Search
 ************************/
 #search {
-	margin-left:2em;
-	margin-bottom:1em;
+	text-align: center;
+	background-attachment: scroll;
+	background-clip: border-box;
+	background-color: transparent;
+	background-image: none;
+	background-color: #666;
+	border: 3px solid #777;
+	color: white;
+	padding: 1em 2em 1.5em 2em;
+	margin: 0 20px 4em 20px;
 }
 #search #q {
 	width: 30em; font-size: 1.5em;
+	margin: 0 0.5em 0 0;
+	position: relative;
+	top: 2px;
 }
+	#search .prompt {
+		font-size: 1.5em;
+		line-height: 1.5em;
+	}	
 	#search .hint {
-		color:#aaa;
-		margin:0.25em 0;
+		color: #aaa;
 	}
+	
+	div.wrapper { width: 940px; margin: 0 auto; padding: 0 30px 36px; position: relative; }
+				div#header { background: #f5f5f5; height: 72px; border-bottom: 1px solid #eee; margin: 0; }
+				div#header h4 { float: left; position: absolute; top: 24px; left: 145px; border-left: 1px solid #ddd; padding-left: 14px; }
+				div#header h4 small { font-size: 14px; font-weight: normal; }
+				div#header h4 a, div#header h4 a:visited { font-weight: normal; }
+
+				div.page-header { padding: 0 0 8px; margin: 18px 0; border-bottom: 1px solid #ddd; }
+				div.page-header h1 { padding: 0; margin: 0; font-size: 24px; line-height: 27px; letter-spacing: 0; }
+
+/* Awesome buttons
+************************/
+
+.awesome, .awesome:visited {
+	background: #222 url(/images/buttons/alert-overlay.png) repeat-x; 
+	display: inline-block; 
+	padding: 5px 10px 6px; 
+	color: #fff; 
+	text-decoration: none;
+	-moz-border-radius: 5px; 
+	-webkit-border-radius: 5px;
+	-moz-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
+	-webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
+	text-shadow: 0 -1px 1px rgba(0,0,0,0.25);
+	border-bottom: 1px solid rgba(0,0,0,0.25);
+	position: relative;
+	cursor: pointer;
+}
+
+.awesome:hover									{ background-color: #111; color: #fff; }
+.awesome:active									{ top: 1px; }
+.small.awesome, .small.awesome:visited 			{ font-size: 11px; padding: ; }
+.awesome, .awesome:visited,
+.medium.awesome, .medium.awesome:visited 		{ font-size: 13px; font-weight: bold; line-height: 1; text-shadow: 0 -1px 1px rgba(0,0,0,0.25); }
+.large.awesome, .large.awesome:visited 			{ font-size: 14px; padding: 8px 14px 9px; }
+.green.awesome, .green.awesome:visited			{ background-color: #91bd09; }
+.green.awesome:hover							{ background-color: #749a02; }
+.blue.awesome, .blue.awesome:visited			{ background-color: #2daebf; }
+.blue.awesome:hover								{ background-color: #007d9a; }
+.red.awesome, .red.awesome:visited				{ background-color: #e33100; }
+.red.awesome:hover								{ background-color: #872300; }
+.magenta.awesome, .magenta.awesome:visited		{ background-color: #a9014b; }
+.magenta.awesome:hover							{ background-color: #630030; }
+.orange.awesome, .orange.awesome:visited		{ background-color: #ff5c00; }
+.orange.awesome:hover							{ background-color: #d45500; }
+.yellow.awesome, .yellow.awesome:visited		{ background-color: #ffb515; }
+.yellow.awesome:hover							{ background-color: #fc9200; }
+
+button {
+	border:0 none;
+}
