--- a/app/views/events/_search.html.erb
+++ b/app/views/events/_search.html.erb
@@ -1,14 +1,16 @@
-<div id="search">
+<div id="search" <% if @q %>class="searched"<% end %>>
   <% unless @q %>
-    <div class="prompt">
-      Which events are you looking for? <span class="hint">Search by event type, location or organiser.</span>
-    </div>
+	<div class="prompt">
+		Which events are you looking for? <span class="hint">Search by event type, location or organiser.</span>
+	</div>
+  <% else %>
   <% end %>
   <% form_tag({:controller => 'events', :action => 'search'}, {:method =>'get'}) do  %>
     <%= text_field_tag :q, @q || '' %>
-	<button class="medium orange awesome" type="submit">Find business events</button>
+	<button class="medium-b orange awesome" type="submit">Find business events</button>
   <% end %>
-  <% if @events && @q %>
-    <p>Your search for "<%= @q %>" found <%= @events.length %> events</p>
-  <% end %>
-</div>
+</div> 
+
+<% if @events && @q %>
+	<h3 class="list-hd">Found <%= @events.length %> events for "<%= @q %>"</h3>
+<% end %>
