--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,6 @@
 	<script type="text/javascript" src="/fancybox/jquery.fancybox-1.3.1.pack.js"></script>
 	<link rel="stylesheet" href="/fancybox/jquery.fancybox-1.3.1.css" type="text/css" media="screen" />
 
-
 	<script type="text/javascript">
 	  //RPXNOW.loadAndRun(['Social'], function () {
 	  //  var activity = new RPXNOW.Social.Activity(
@@ -44,7 +43,7 @@
            <div class="yui-u first" id="mast">
 				<h1>
 					<a id="go-home" href="/" title="Back to the homepage" name="go-home">
-						<img class="logo" alt="The Business Diary" src="/images/logo.png">
+						<img class="logo" alt="The Business Diary" src="/images/logo7.png">
 					</a>
 				</h1>
 				<p id="strapline">Meet. Connect. Learn.</p>
