--- a/app/views/events/_events_list.html.erb
+++ b/app/views/events/_events_list.html.erb
@@ -1,3 +1,9 @@
+<% if @events && @q %>
+	<h3 class="list-hd">Found <%= @events.length %> events for "<%= @q %>"</h3>
+<% else %>
+	<h3 class="list-hd">Upcoming events in london</h3>
+<% end %>
+
 <div id="wrap" class="events">
   <% unless events.empty? %>
     <ul class="events-list">
