--- a/public/stylesheets/application2.css
+++ b/public/stylesheets/application2.css
@@ -1,5 +1,5 @@
 body {
-	background: #C1E1ED;
+	background: #D5EAF2;
 }
 
 a {
@@ -152,7 +152,7 @@ img.logo {
 	background-color: transparent;
 	background-image: none;
 	background-color: #666;
-	border: 3px solid #777;
+	border: 4px solid #777;
 	color: white;
 	padding: 1em 2em 1.5em 2em;
 	margin: 0 20px 4em 20px;
@@ -160,13 +160,14 @@ img.logo {
 	#search.searched {
 		color: #666;
 		background-color: #ddd;
-		border: 3px solid #eee;
+		border: 4px solid #eee;
 	}
 	#search #q {
 		width: 25em; font-size: 1.8em;
 		margin: 0 0.5em 0 0;
+		padding: .2em .2em .2em .2em;
 		position: relative;
-		top: 3px;
+		top: 4px;
 	}
 h3.list-hd {
 	color: #bbb;
@@ -206,7 +207,10 @@ h3.list-hd {
 .small-b.awesome, .small-b.awesome:visited 		{ font-size: 11px; margin: 0 0 .5em 0; }
 .awesome, .awesome:visited,
 .medium-b.awesome, .medium-b.awesome:visited 	{ font-size: 13px; font-weight: bold; line-height: 1; text-shadow: 0 -1px 1px rgba(0,0,0,0.25); }
-.large-b.awesome, .large-b.awesome:visited 		{ font-size: 14px; padding: 8px 14px 9px; }
+.large-b.awesome, .large-b.awesome:visited 		{ font-size: 1.4em; padding: 8px 14px 9px; }
+
+.scheme-2.awesome, .scheme-2.awesome:visited	{ background-color: #00C7C7; }
+.scheme-2.awesome:hover							{ background-color: #00A6A6; }
 
 .green.awesome, .green.awesome:visited			{ background-color: #91bd09; }
 .green.awesome:hover							{ background-color: #749a02; }
