play with search prompt copy

--- a/app/views/events/_search.html.erb
+++ b/app/views/events/_search.html.erb
@@ -1,7 +1,7 @@
 <div id="search" <% if @q %>class="searched"<% end %>>
   <% unless @q %>
 	<div class="prompt">
-		Which events are you looking for? <span class="hint">Search by topic, event type, location or organiser.</span>
+		Which events are you looking for? <span class="hint">Search by: title / topic / location / organiser.</span>
 	</div>
   <% else %>
   <% end %>
