change uservoice background colours to match new turquoise search button

--- a/app/views/layouts/_uservoice.html.erb
+++ b/app/views/layouts/_uservoice.html.erb
@@ -7,9 +7,9 @@ var uservoiceOptions = {
   showTab: true,  
   /* optional */
   alignment: 'left',
-  background_color:'#f00', 
+  background_color:'#00C7C7', 
   text_color: 'white',
-  hover_color: '#06C',
+  hover_color: '#00A6A6',
   lang: 'en'
 };
 
